# trypurescript

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  cabal.project  flake.nix  stack.yaml  trypurescript.cabal
.github/workflows/: ci.yml
client/: .gitignore  package.json  spago.yaml  updateSharedConfigVersions.mjs
client/src/Try/: SharedConfig.purs
deploy/: nginx.conf  start
server/: Main.hs
staging/: .gitignore  packages.dhall  spago.yaml
